--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
      <div class="student-owner">
-       <p>Hello Elad</p>  
+       <p>Hello Elad, hi</p>  
     </div>
     <div class="student-contributer">
     </div>   
