stage 2 - contributer changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
      <div class="student-owner">
        <p>Hello Elad, hi</p>  
     </div>
+
     <div class="student-contributer">
+        <p>Hi Honey, good job!</p>
     </div>   
     </body>
 </html>
